overflow fixes

--- a/less/theme.less
+++ b/less/theme.less
@@ -229,10 +229,9 @@ blockquote {
 	perspective: 303px;
 	height: 100%;
 	height: 100vh;
+	overflow: auto;
 	overflow-x: hidden;
-	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
-	margin-right: -20px;
 	@media @tablet {
 		height: 100%;
 	}
@@ -431,9 +430,9 @@ blockquote {
 	right: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;
+	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
-	.border-radius(0px);
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
